--- a/app/themes/waterboys/styles/wb__home.css
+++ b/app/themes/waterboys/styles/wb__home.css
@@ -43,6 +43,7 @@
   font-weight: 300;
   padding-bottom: 25px;
   font-family: $wb__libl;
+  letter-spacing: 1px;
 }
 
 .wb__hero-button {
